# data-refinery-cli

./: .gitignore  .markdownlint-cli2.yaml  AGENTS.colleague.md  CHANGELOG.md  CLAUDE.md  README.md  culture.yaml  docker-compose.yml  pyproject.toml  sonar-project.properties
.claude/: skills.local.yaml.example
.claude/skills/ask-colleague/: SKILL.md
.claude/skills/cicd/: SKILL.md
.claude/skills/communicate/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/remember/: SKILL.md
.devague/: current
.devague/frames/: data-refinery-cli-ships-the-storage-data-quality-i.json  data-refinery-now-owns-store-file-migration-a-cons.json  data-refinery-s-files-backend-can-write-a-fail-clo.json
.devague/plans/: data-refinery-cli-ships-the-storage-data-quality-i.json  data-refinery-s-files-backend-can-write-a-fail-clo.json
.github/workflows/: publish-stack.yml  publish.yml  tests.yml
data_refinery/: __init__.py  __main__.py
data_refinery/cli/: __init__.py  _errors.py  _output.py
data_refinery/cli/_commands/: cli.py  doctor.py  explain.py  learn.py  overview.py  quality.py  stack.py  store.py  whoami.py
data_refinery/explain/: __init__.py  catalog.py
data_refinery/quality/: __init__.py  checks.py
data_refinery/store/: __init__.py  backend.py  envelope.py  migrate.py
data_refinery/store/backends/: __init__.py  files.py  mongo.py  neo4j.py
docs/: contract.md  skill-sources.md  stack-image.md
docs/plans/: 2026-06-20-data-refinery-cli-ships-the-storage-data-quality-i.md  2026-06-24-data-refinery-s-files-backend-can-write-a-fail-clo.md
docs/specs/: 2026-06-20-data-refinery-cli-ships-the-storage-data-quality-i.md  2026-06-21-data-refinery-now-owns-store-file-migration-a-cons.md  2026-06-24-data-refinery-s-files-backend-can-write-a-fail-clo.md
tests/: conftest.py  test_cli.py  test_cli_introspection.py  test_live_stack.py  test_no_optional_top_import.py  test_quality.py  test_scope_no_leak.py  test_stack.py  test_store_adapters.py  test_store_api.py  test_store_backends.py  test_store_cli.py  test_store_envelope.py  test_store_gitignore.py  test_store_migrate.py
